# btcpp

./: .clang-format  CMakeLists.txt  LICENSE  main.cpp
includes/: core.h  helper.h
src/: core.cpp
